--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -7,7 +7,7 @@ positions:
 - logo: /assets/images/badges/PKU_red.png
   name: B.S., Peking University (2021)
 
-email: "your@email.com"
+email: "maliyuan@westlake.edu.cn"
 # cv_link: link-to-your-cv-file
 gscholar: your_google_scholar_id
 github: your_github_id
