--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -1,17 +1,17 @@
-primary_name: "Your Name"
-secondary_name: ""
-navbar_name: "Your Name"
+primary_name: "Liyuan Ma"
+# secondary_name: ""
+# navbar_name: "Your Name"
 
-positions:
-- name: Position without logo
-- logo: /assets/images/badges/PKU_red.png
-  name: B.S., Peking University (2021)
+# positions:
+# - name: Position without logo
+# - logo: /assets/images/badges/PKU_red.png
+#   name: B.S., Peking University (2021)
 
-email: "your@email.com"
+email: "maliyuan@westlake.edu.cn"
 # cv_link: link-to-your-cv-file
-gscholar: your_google_scholar_id
+gscholar: j6T8Tk8AAAAJ
 github: your_github_id
-twitter: your_twitter_id
+# twitter: your_twitter_id
 # wechat_qrcode: /assets/images/etc/wechat.jpg
 # wechat_prompt: >-
 #   Please tell me your <strong>name</strong> and <strong>affiliation</strong> (current or past) when adding my wechat. Thanks!
@@ -28,10 +28,13 @@ portrait_caption: >-
   Photo by Manja Vitolic on Unsplash (this caption is optional, comment it out to disable).
 
 education:
-- name: Peking University
+- name: Southwest Jiaotong University
   logo: /assets/images/badges/PKU_red.png
-  position: B.S. in Computer Science
-  date: Sep. 2017 - Jul. 2021
+  position: B.S. in Electronic Information Engineering
+  # date: Sep. 2017 - Jul. 2021
+- name: Zhejiang University
+  logo: /assets/images/badges/PKU_red.png
+  position: B.S. in Electronic Information Engineering
 
 # experience:
 # - name: Peking University
