--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -2,17 +2,17 @@ primary_name: "Liyuan Ma"
 # secondary_name: ""
 # navbar_name: "Your Name"
 
-# positions:
-# - name: Position without logo
-# - logo: /assets/images/badges/PKU_red.png
-#   name: B.S., Peking University (2021)
+positions:
+- name: Research Associate
+- logo: /assets/images/badges/westlake.png
+  name: B.S., Westlake University (Now)
 
 email: "maliyuan@westlake.edu.cn"
 # cv_link: link-to-your-cv-file
 gscholar: j6T8Tk8AAAAJ
-github: your_github_id
+# github: your_github_id
 # twitter: your_twitter_id
-# wechat_qrcode: /assets/images/etc/wechat.jpg
+wechat_qrcode: /assets/images/etc/wechat.jpg
 # wechat_prompt: >-
 #   Please tell me your <strong>name</strong> and <strong>affiliation</strong> (current or past) when adding my wechat. Thanks!
 # linkedin: your-linked-in-id
@@ -29,24 +29,25 @@ portrait_caption: >-
 
 education:
 - name: Southwest Jiaotong University
-  logo: /assets/images/badges/PKU_red.png
+  logo: /assets/images/badges/swjtu.png
   position: B.S. in Electronic Information Engineering
   # date: Sep. 2017 - Jul. 2021
 - name: Zhejiang University
+  logo: /assets/images/badges/zju.jpg
+  position: Ph.D. in Electronic Science and Technology
+
+
+experience:
+- name: Alibaba Group DAMO
   logo: /assets/images/badges/PKU_red.png
-  position: B.S. in Electronic Information Engineering
-
-# experience:
-# - name: Peking University
-#   logo: /assets/images/badges/PKU_red.png
-#   position: Research Intern
-#   date: Sep. 2019 - Jul. 2021
+  position: Research Intern
+  # date: Sep. 2022 - Jul. 2021
 
 
-awards:
-- name: Award Name 2
-  date: 2024
-- name: Award Name 1 
-  date: 2021
-- name: A quick brown fox jumps over the lazy dog and runs away award
-  date: 2021
+# awards:
+# - name: Award Name 2
+#   date: 2024
+# - name: Award Name 1 
+#   date: 2021
+# - name: A quick brown fox jumps over the lazy dog and runs away award
+#   date: 2021
