--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -4,7 +4,7 @@ primary_name: "Liyuan Ma"
 
 positions:
 - name: Research Associate
-- logo: /assets/images/badges/westlake.png
+- logo: /assets/images/badges/westlake.jpeg
   name: B.S., Westlake University (Now)
 
 email: "maliyuan@westlake.edu.cn"
