--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -22,7 +22,7 @@ short_bio: >-
   I am a research assistant in Guojun Qi's lab at Westlake University.
   My research interest includes image&&video editing and generation, multimodal generative models.
 
-portrait_url: /assets/images/photos/mly.png
+portrait_url: /assets/images/photos/mly.jpeg
 # portrait_caption: >-
 #   Photo by Manja Vitolic on Unsplash (this caption is optional, comment it out to disable).
 
